--- a/style.css
+++ b/style.css
@@ -37,22 +37,27 @@ h3{
     color: #0000ff;
   }
 }
-@media only screen and (min-width:769px) and (max-width:1024px){
+@media only screen and (min-width:769px) and (max-width:1600px){
   .c1{
-    width: 65%;
+    width: 60%;
   }
   .c2{
-       width:25%;
+       width:30%;
       }
       .c3,.c4,.c5{
         width: 30%;
       }
       .c6,.c7,.c8,.c9{
-        width: 40%;
+        width: 45%;
       }
 h3{
   text-align: center;
   color: #0000ff;
+}
+.main{
+width: 80%;
+margin-left: auto;
+margin-left: auto;
 }
 
 }
